Fixed the navbar and texh stack marquee effect

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
@@ -16,7 +16,6 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="#">My Setup</a></li>
         <li><button id="theme-toggle" class="theme-button"><!-- Sun icon will be loaded here by JS --></button></li>
       </ul>
     </nav>
@@ -41,31 +40,225 @@
     <!-- Technology Stack Section -->
     <section class="tech-stack">
       <div class="tech-row tech-row-1">
+        <!-- First row - left to right -->
+        <div class="tech-item">
+          <img src="./src/assets/react-icon.svg" alt="React">
+          <span>React</span>
+        </div>
+        <div class="tech-item"><img src="./src/assets/tailwind-icon.svg" alt="Tailwind CSS"><span>TailwindCSS</span></div>
+        <div class="tech-item"><img src="./src/assets/figma-icon.svg" alt="Figma">
+          <span>Figma</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/react-icon.svg" alt="React">
+          <span>React</span>
+        </div>
+        <div class="tech-item"><img src="./src/assets/tailwind-icon.svg" alt="Tailwind CSS"><span>TailwindCSS</span></div>
+        <div class="tech-item"><img src="./src/assets/figma-icon.svg" alt="Figma">
+          <span>Figma</span>
+        </div>
         <div class="tech-item"><img src="./src/assets/react-icon.svg" alt="React"><span>React</span></div>
-        <div class="tech-item"><img src="./src/assets/tailwind-icon.svg" alt="Tailwind CSS"><span>Tailwind CSS</span></div>
-        <div class="tech-item"><img src="./src/assets/figma-icon.svg" alt="Figma"><span>Figma</span></div>
-        <!-- Duplicate for marquee effect -->
+        <div class="tech-item"><img src="./src/assets/tailwind-icon.svg" alt="Tailwind CSS"><span>TailwindCSS</span></div>
+        <div class="tech-item"><img src="./src/assets/figma-icon.svg" alt="Figma">
+          <span>Figma</span>
+        </div>
+        <!--  Duplicating for marquee effect -->
+        <div class="tech-item">
+          <img src="./src/assets/react-icon.svg" alt="React">
+          <span>React</span>
+        </div>
+        <div class="tech-item"><img src="./src/assets/tailwind-icon.svg" alt="Tailwind CSS"><span>TailwindCSS</span></div>
+        <div class="tech-item"><img src="./src/assets/figma-icon.svg" alt="Figma">
+          <span>Figma</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/react-icon.svg" alt="React">
+          <span>React</span>
+        </div>
+        <div class="tech-item"><img src="./src/assets/tailwind-icon.svg" alt="Tailwind CSS"><span>TailwindCSS</span></div>
+        <div class="tech-item"><img src="./src/assets/figma-icon.svg" alt="Figma">
+          <span>Figma</span>
+        </div>
         <div class="tech-item"><img src="./src/assets/react-icon.svg" alt="React"><span>React</span></div>
-        <div class="tech-item"><img src="./src/assets/tailwind-icon.svg" alt="Tailwind CSS"><span>Tailwind CSS</span></div>
-        <div class="tech-item"><img src="./src/assets/figma-icon.svg" alt="Figma"><span>Figma</span></div>
+        <div class="tech-item"><img src="./src/assets/tailwind-icon.svg" alt="Tailwind CSS"><span>TailwindCSS</span></div>
+        <div class="tech-item"><img src="./src/assets/figma-icon.svg" alt="Figma">
+          <span>Figma</span>
+        </div>
       </div>
+      
       <div class="tech-row tech-row-2">
-        <div class="tech-item"><img src="./src/assets/javascript-icon.svg" alt="JavaScript"><span>JavaScript</span></div>
-        <div class="tech-item"><img src="./src/assets/html-icon.svg" alt="HTML"><span>HTML</span></div>
-        <div class="tech-item"><img src="./src/assets/css3-icon.svg" alt="CSS"><span>CSS</span></div>
-        <!-- Duplicate for marquee effect -->
-        <div class="tech-item"><img src="./src/assets/javascript-icon.svg" alt="JavaScript"><span>JavaScript</span></div>
-        <div class="tech-item"><img src="./src/assets/html-icon.svg" alt="HTML"><span>HTML</span></div>
-        <div class="tech-item"><img src="./src/assets/css3-icon.svg" alt="CSS"><span>CSS</span></div>
+        <!-- Second row - right to left -->
+        <div class="tech-item">
+          <img src="./src/assets/javascript-icon.svg" alt="JavaScript">
+        <span>JavaScript</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/html-icon.svg" alt="HTML">
+        <span>HTML</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/css3-icon.svg" alt="CSS">
+        <span>CSS</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/vite-icon.svg" alt="Vite">
+        <span>Vite</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/javascript-icon.svg" alt="JavaScript">
+        <span>JavaScript</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/html-icon.svg" alt="HTML">
+        <span>HTML</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/css3-icon.svg" alt="CSS">
+        <span>CSS</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/vite-icon.svg" alt="Vite">
+        <span>Vite</span>
+        </div>
+        <!-- Duplicate again to ensure full width coverage -->
+        <div class="tech-item">
+          <img src="./src/assets/javascript-icon.svg" alt="JavaScript">
+        <span>JavaScript</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/html-icon.svg" alt="HTML">
+        <span>HTML</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/css3-icon.svg" alt="CSS">
+        <span>CSS</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/vite-icon.svg" alt="Vite">
+        <span>Vite</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/javascript-icon.svg" alt="JavaScript">
+        <span>JavaScript</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/html-icon.svg" alt="HTML">
+        <span>HTML</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/css3-icon.svg" alt="CSS">
+        <span>CSS</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/vite-icon.svg" alt="Vite">
+        <span>Vite</span>
+        </div>
       </div>
+      
       <div class="tech-row tech-row-3">
-        <div class="tech-item"><img src="./src/assets/flutter-icon.svg" alt="Flutter"><span>Flutter</span></div>
-        <div class="tech-item"><img src="./src/assets/firebase-icon.svg" alt="Firebase"><span>Firebase</span></div>
-        <!-- Duplicate for marquee effect -->
-        <div class="tech-item"><img src="./src/assets/flutter-icon.svg" alt="Flutter"><span>Flutter</span></div>
-        <div class="tech-item"><img src="./src/assets/firebase-icon.svg" alt="Firebase"><span>Firebase</span></div>
+        <!-- Third row - left to right -->
+        <div class="tech-item">
+          <img src="./src/assets/flutter-icon.svg" alt="Flutter">
+        <span>Flutter</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/dart-icon.svg" alt="Dart">
+        <span>Dart</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/firebase-icon.svg" alt="Firebase">
+        <span>Firebase</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/flutter-icon.svg" alt="Flutter">
+        <span>Flutter</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/dart-icon.svg" alt="Dart">
+        <span>Dart</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/firebase-icon.svg" alt="Firebase">
+        <span>Firebase</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/flutter-icon.svg" alt="Flutter">
+        <span>Flutter</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/dart-icon.svg" alt="Dart">
+        <span>Dart</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/firebase-icon.svg" alt="Firebase">
+        <span>Firebase</span>
+        </div>
+        <!-- Duplicate again to ensure full width coverage -->
+        <div class="tech-item">
+          <img src="./src/assets/flutter-icon.svg" alt="Flutter">
+        <span>Flutter</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/dart-icon.svg" alt="Dart">
+        <span>Dart</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/firebase-icon.svg" alt="Firebase">
+        <span>Firebase</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/flutter-icon.svg" alt="Flutter">
+        <span>Flutter</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/dart-icon.svg" alt="Dart">
+        <span>Dart</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/firebase-icon.svg" alt="Firebase">
+        <span>Firebase</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/flutter-icon.svg" alt="Flutter">
+        <span>Flutter</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/dart-icon.svg" alt="Dart">
+        <span>Dart</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/firebase-icon.svg" alt="Firebase">
+        <span>Firebase</span>
+        </div>
       </div>
     </section>
+
+    <!-- Footer Section -->
+    <footer class="footer-section">
+      <div class="footer-content">
+        <div class="footer-heading">
+          <!-- TODO: Change the links to your socials -->
+          <h2>GET IN TOUCH</h2>
+        </div>
+        <div class="social-links">
+          <p class="social-links-title">Social Links:</p>
+          <ul>
+            <li>
+              <span>Instagram:</span>
+              <a href="https://www.instagram.com/alaa.alaff" target="_blank">alaa.alaff <span class="arrow">&rarr;</span></a>
+            </li>
+            <li>
+              <span>LinkedIn:</span>
+              <a href="https://www.linkedin.com/in/alaa-alaff" target="_blank">alaa-alaff <span class="arrow">&rarr;</span></a>
+            </li>
+            <li>
+              <span>Github:</span>
+              <a href="https://github.com/Alaa98-alaff" target="_blank">Alaa98-alaff <span class="arrow">&rarr;</span></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 
     <script>
       // Keep your existing script for the sun icon, but target the new button ID
