--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Taimoor | Frontend Developer</title>
+    <link rel="shortcut icon" href="/the_logo.svg" type="image/x-icon">
     <script src="./src/main.js"></script>
   </head>
   <body>
@@ -15,7 +16,7 @@
     <script>
       document.addEventListener('DOMContentLoaded', function() {
     // Changing word effect with letter-by-letter animation
-    const words = ['smooth', 'fast', 'amazing', 'creative', 'beautiful'];
+    const words = ['smooth', 'amazing', 'creative', 'beautiful'];
     const changingWord = document.querySelector('.changing-word');
     let currentIndex = 0;
     
