made the linkedin logo look better

--- a/index.html
+++ b/index.html
@@ -866,11 +866,11 @@
   
             <div class="socials">
               <a href="https://www.linkedin.com/in/taimoor-abrejo" target="_blank">
-                <img src="./src/assets/socials_svgs/linkedin-svg.svg" alt="linkedin logo">
+                <img id="linkedin-svg" src="./src/assets/socials_svgs/linkedin-svg.svg" alt="linkedin logo">
                 <span class="social-name">LinkedIn</span>
               </a>
               <a href="https://github.com/J1nSakai?tab=repositories" target="_blank">
-                <img src="./src/assets/socials_svgs/github-svg.svg" alt="github logo">
+                <img id="github-svg" src="./src/assets/socials_svgs/github-svg.svg" alt="github logo">
                 <span class="social-name">Github</span>
               </a>
             </div>
