made some changes

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
         </div>
         <!--  Duplicating for marquee effect -->
         <div class="tech-item">
-          <img src="./src/assets/react-icon.svg" alt="React">
+          <img src="./src/assets/tech_stack_svgs/react-icon.svg" alt="React">
           <span>React</span>
         </div>
         <div class="tech-item"><img src="./src/assets/tech_stack_svgs/tailwind-icon.svg" alt="Tailwind CSS"><span>TailwindCSS</span></div>
