trying to make vercel locate js

--- a/index.html
+++ b/index.html
@@ -669,6 +669,6 @@
     </section>
     </div>
 
-    <script src="src/main.js"></script>
+    <script src="src/main.js" type="module"></script>
   </body>
 </html>
