Added Python in tech stack, and change Frontend Developer to Software Developer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taimoor | Frontend Developer</title>
+    <title>Taimoor | Software Developer</title>
     <link rel="shortcut icon" href="/the_logo.svg" type="image/x-icon">
   </head>
 
@@ -27,12 +27,12 @@
       <!-- Hero Section -->
     <header class="hero-section">
       <div class="hero-content">
-        <h1>Hi! I'm <span class="name-accent1">Taimoor</span></h1>
+        <h1>Hi! I'm <br><span class="name-accent1">Taimoor</span></h1>
         <p class="tagline">I make your website <span class="changing-word"></span></p>
         <div class="description-container">
           <div class="vertical-line"></div>
           <p class="description">
-            An aspiring Frontend Developer with a passion for creating amazing interfaces
+            An aspiring Software Developer with a passion for creating innovative and user-friendly software solutions.
           </p>
         </div>
         
@@ -497,16 +497,8 @@
         <span>Firebase</span>
         </div>
         <div class="tech-item">
-          <img src="./src/assets/tech_stack_svgs/flutter-icon.svg" alt="Flutter">
-        <span>Flutter</span>
-        </div>
-        <div class="tech-item">
-          <img src="./src/assets/tech_stack_svgs/dart-icon.svg" alt="Dart">
-        <span>Dart</span>
-        </div>
-        <div class="tech-item">
-          <img src="./src/assets/tech_stack_svgs/firebase-icon.svg" alt="Firebase">
-        <span>Firebase</span>
+          <img src="./src/assets/tech_stack_svgs/python-icon.svg" alt="Python">
+        <span>Python</span>
         </div>
         <div class="tech-item">
           <img src="./src/assets/tech_stack_svgs/flutter-icon.svg" alt="Flutter">
@@ -519,6 +511,26 @@
         <div class="tech-item">
           <img src="./src/assets/tech_stack_svgs/firebase-icon.svg" alt="Firebase">
         <span>Firebase</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/tech_stack_svgs/python-icon.svg" alt="Python">
+        <span>Python</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/tech_stack_svgs/flutter-icon.svg" alt="Flutter">
+        <span>Flutter</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/tech_stack_svgs/dart-icon.svg" alt="Dart">
+        <span>Dart</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/tech_stack_svgs/firebase-icon.svg" alt="Firebase">
+        <span>Firebase</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/tech_stack_svgs/python-icon.svg" alt="Python">
+        <span>Python</span>
         </div>
         <!-- Duplicate again to ensure full width coverage -->
         <div class="tech-item">
@@ -534,16 +546,8 @@
         <span>Firebase</span>
         </div>
         <div class="tech-item">
-          <img src="./src/assets/tech_stack_svgs/flutter-icon.svg" alt="Flutter">
-        <span>Flutter</span>
-        </div>
-        <div class="tech-item">
-          <img src="./src/assets/tech_stack_svgs/dart-icon.svg" alt="Dart">
-        <span>Dart</span>
-        </div>
-        <div class="tech-item">
-          <img src="./src/assets/tech_stack_svgs/firebase-icon.svg" alt="Firebase">
-        <span>Firebase</span>
+          <img src="./src/assets/tech_stack_svgs/python-icon.svg" alt="Python">
+        <span>Python</span>
         </div>
         <div class="tech-item">
           <img src="./src/assets/tech_stack_svgs/flutter-icon.svg" alt="Flutter">
@@ -556,6 +560,26 @@
         <div class="tech-item">
           <img src="./src/assets/tech_stack_svgs/firebase-icon.svg" alt="Firebase">
         <span>Firebase</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/tech_stack_svgs/python-icon.svg" alt="Python">
+        <span>Python</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/tech_stack_svgs/flutter-icon.svg" alt="Flutter">
+        <span>Flutter</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/tech_stack_svgs/dart-icon.svg" alt="Dart">
+        <span>Dart</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/tech_stack_svgs/firebase-icon.svg" alt="Firebase">
+        <span>Firebase</span>
+        </div>
+        <div class="tech-item">
+          <img src="./src/assets/tech_stack_svgs/python-icon.svg" alt="Python">
+        <span>Python</span>
         </div>
       </div>
     </section>
