fixed overflow of the url-shortner-svg for small devices

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taimoor | Software Developer</title>
+    <title>Taimoor | Web Developer</title>
     <link rel="shortcut icon" href="/the_logo.svg" type="image/x-icon">
   </head>
 
@@ -654,7 +654,7 @@
         <!-- Project Card Template - Copy this for each new project -->
         <div class="project-card">
           <div class="project-image">
-            <img id="url-shortner-svg" src="./src/assets/projects_svgs/url-shortner.svg" alt="PennyWise">
+            <img id="url-shortner-svg" src="./src/assets/projects_svgs/url-shortner.svg" alt="URL Shortner">
           </div>
           
           <div class="project-content">
